style/gui.css
html,body {
   padding:0;
   margin:0;
   width:100%;
   height:100%;
   position:relative;
   font-family:"Ubuntu", "Liberation Sans", "Deja Vu Sans", Arial, sans-serif;
}

#content {
   position:absolute;
   top:1.5em;
   bottom:0;
   left:0;
   right:0;
}

#left-pane {
   position:absolute;
   top:0;
   bottom:0;
   left:0;
   right:0;
   overflow:hidden;
}

#splitter {
   position:absolute;
   left:75%;
   top:0;
   bottom:0;
   width:4px;
   background:silver
}

#toolbar {
   position:absolute;
   z-index:100;
   top:0;
   min-height:1.4rem;
   line-height:1.4rem;
   left:0;
   right:0;
   vertical-align:middle;
   background:-webkit-linear-gradient(#DEF, #BCE);
   background:-ms-linear-gradient(#DEF, #BCE);
   background:linear-gradient(#DEF, #BCE);
   font-size:0
}

#toolbar .sep {
   padding-left:0.5ex;
   padding-right:0.5ex;
   display:inline-block;
   vertical-align:middle;
   height:1.4rem;
   border-left:1px solid silver
}

#toolbar button, #toolbar select {
   background:transparent;
   -webkit-box-shadow:0 0 1px silver;
   box-shadow:0 0 1px gray;
   height:1.4rem;
   box-sizing:border-box;
   font-size:small;
   border:0;
   border-top:1px solid gray;
   border-bottom:1px solid gray;
   vertical-align:middle;
   display:inline-block;
   margin:0;
   padding:0 3px;
}

#toolbar span {
   vertical-align:middle
}
#toolbar button * {
   vertical-align:middle
}

#toolbar button, #toolbar select, #toolbar .text {
   font-size:small;
}

#toolbar button:first-child, #toolbar select:first-child, .algomode #algo-exec {
   border-top-left-radius:4px;
   border-bottom-left-radius:5px;
   border-left:1px solid gray;
   margin-left:0.75ex;
}

#toolbar button:last-child, #toolbar select:last-child, .algomode #saveas, .codemode #redraw, .launch-disabled #algorun {
   border-top-right-radius:4px;
   border-bottom-right-radius:5px;
   border-right:1px solid gray;
   margin-right:0.75ex;
}

.launch-disabled #algo-exec {
   display:none !important
}

#toolbar .right {
   float:right;
   height:1.3rem
}

#toolbar button {
  -webkit-transition:300ms;
  -ms-transition:300ms;
  transition:300ms;
}

#toolbar button:hover, #toolbar select:hover {
  background:rgba(255,255,255,0.4)
}

#results {
   top:0;
   right:0;
   bottom:0;
   position:absolute;
   overflow:auto;
   white-space:pre-wrap;
}

#splitter {
   cursor:ew-resize;
}

.disabled, .codemode .codemode-disabled {
   display:none !important;
}

#codeedit, #automatoncode {
   top:0;
   left:0;
   right:0;
   bottom:0;
   position:absolute;
}
.CodeMirror {
   font-size:12pt;
   font-family:"Ubuntu Mono", monospace;
   height:100%;
}

.designmode .algomode-specific {
   display:none !important;
}

.algomode .designmode-specific {
   display:none !important;
}

#svg-container, #toolbar, #results svg {
   -moz-user-select:none;
   -webkit-user-select:none;
   -ms-user-select: none;
   user-select:none;
}

#svg-container, #automatoncode, #automatoncodeedit {
   border:0;
   resize:none;
   position:absolute;
   top:0;
   left:0;
   width:100%;
   height:100%
}

#word {
   position:absolute;
   left:1em;
   top:1em;
   right:1em;
   color:#666;
   font-size:2em;
   font-weight:bold;
   text-shadow:0 0 2px gray;
}

#word span {
   transition:400ms ease-out;
   display:inline-block;
   opacity:1;
   transform:scale(1);
}

#word .eaten {
   opacity:0;
   -webkit-transform:scale(3) translate(-8px, -8px);
   -ms-transform:scale(3) translate(-8px, -8px);
   transform:scale(3) translate(-8px, -8px);
}

#results-tb button {
   background:rgba(250,250,250, 0.8);
   border-radius:4px;
   border:1px solid #AAA;
   margin-top:0.5ex;
   color:gray;
   font-weight:bold;
   font-size:small
}

#results-tb button * {
   vertical-align:middle
}

#results-tb button img {
   opacity:0.5
}

#results-tb {
   text-align:center;
   -webkit-transition:200ms;
   -ms-transition:200ms;
   transition:200ms;
   opacity:0.5;
}

#results-tb:hover {
   opacity:1;
}

select {
   display:inline-block;
}


/*.selectlabel {
    position: relative;
    display: inline-block;
}

.selectlabel:after {
    content: '';
    width: 1rem;
    height: 1.27rem;
    position: absolute;
    display: inline-block;
    border-top-right-radius:3px;
    border-bottom-right-radius:3px;
    top: 1px;
    right: 6px;
    background:pink;
    pointer-events: none;

}*/

.libD_notify-area {
   max-width:none !important
}

#div-quiz {
    position:relative;
    z-index:100;
    max-height:100%;
    overflow:auto
}

#quiz-title, #quiz-author {

    text-align:center;
    font-family:sans-serif;
    font-weight:normal
}

#quiz-title {
    font-size:1.5em;
    color:#038;
    margin-bottom:0.5rem;
    padding-bottom:0
}

#quiz-author {
    color:#444;
    font-size:small;
    margin-top:0;
    padding-top:0;
    font-style:italic
}

#close-quiz {
    position:absolute;
    top:0;
    font-size:small;
    right:0;
    color:#C63;
    text-decoration:none;
    padding-right:1ex
}

#div-quiz.started #quiz-descr {
    display:none
}

#quiz-descr, #quiz-content {
    text-align:justify;
    margin:1em 1ex;
    color:#222;
}

.button-container {
    text-align:center;
    margin-top:1ex
}

#div-quiz button {
    background:#F1F1F1;
    border-radius:4px;
    border:1px solid silver;
    padding:2px;
    margin:0 0.5ex;
    -webkit-box-shadow:0 0 1px silver;
    box-shadow:0 0 1px silver;
    -webkit-transition:500ms;
    -ms-transition:500ms;
    transition:500ms
}

#div-quiz button:hover {
    -webkit-box-shadow:0 0 1px gold;
    box-shadow:0 0 1px gold;
    background:#FAFAF1;
}

#quiz-answers>ul {
    list-style:none;
    margin-left:0;
    padding-left:1em;
    color:black
}

#quiz-answers input {
    margin-right:1em
}

.quiz-answer-id {
    color:green;
    display:inline-block;
    min-width:3ex
}

.quiz-question-id {
    color:gray
}

#quiz-answers label {
    display:block;
    margin:0.5ex 0;
    border-radius:3px;
    -webkit-transition:500ms;
    -ms-transition:500ms;
    transition:500ms;
}

#quiz-answers label:hover {
    background:#FFFFCC;
    box-shadow: 0 0 5px #FFFFCC
}

#automata-container {
   position:absolute;
   top:0;
   left:0;
   right:0;
   bottom:0;
}

#correction-table {
    border-collapse:collapse;
    box-shadow: 2px 2px 2px silver;
    margin:auto;
}

#correction-table td, #correction-table th {
    border:1px solid gray;
    padding:0.5ex;
}

#correction-table td {
    vertical-align:top;
    text-align:left
}

#correction-table .possibilities li, .qcmt li {
    list-style:none;
}

.qinst .possibilities, .qcmt ul {
   margin:0;
   padding:0;
}

.qinst .possibilities li {
    margin-left:1ex
}

#correction-table th {
    background:#F5F5F5;
    text-align:center;
    font-size:x-small;
}

.qstate {
    text-align:center !important
}

.qid {
    color:#07C;
    float:left;
    font-size:bold
}

#svg-container {
   z-index:100;
}

#welcome {
   z-index:0;
   color:gray;
   font-family:"Ubuntu", "Liberation Sans", sans-serif;
   line-height:1.5em;
   text-shadow:5px 5px 5px #EEE
}

#welcome h2 {
   font-size:x-large;
   text-align:center;
   font-weight:normal
}

#word-layer1, #word-layer2 {
   position:absolute;
   top:0;
   left:0;
   right:0;
   display:inline-block;
   z-index:10;
}

#word-layer2 {
   opacity:0.4;
   z-index:0;
}

#automata-list-chooser {
   position:absolute;
   top:0;
   right:0;
   bottom:0;
   z-index:1000;
   background:#EFFAFF;
   max-width:40ex;
   box-shadow: -1px 0 1px #DDD;
}

#automata-list-chooser-close {
   position:absolute;
   top:0;
   right:1ex;
   font-size:small;
   text-decoration:none;
   color:red
}

#automata-list-chooser svg {
   max-width:2rem;
   max-height:2rem;
}

#automata-list-chooser-content {
   list-style:none;
   padding:0;
   margin:1ex 1px;
   border:1px solid #DDD;
   background:white;
}

#automata-list-chooser-content li {
   padding:0.3ex;
   margin:0;
}
#automata-list-chooser-content li span, #automata-list-chooser-content li svg {
   display:inline-block;
   vertical-align:middle;
}

#automata-list-chooser-content li:hover {
   background:#DEF
}

#automata-list-chooser-content a {
   text-decoration:none;
   display:block;
   color:gray
}

#automata-list-chooser p {
   text-align:justify;
   text-indent:2ex;
   font-size:small;
   color:gray;
   font-style:italic;
   margin:1.5rem 1ex 0 0;
}

.automaton-number {
   color:#0A5;
   font-weight:bold;
   text-align:right;
   padding:0 0.5ex;
   float:right;
   min-width:3ex;
   right:0
}

#pane-distantfile a {
   text-decoration:none;
   color:gray
}

#loaddistantfile p {
   margin-bottom:0;
   padding-bottom:0;
}


#pane-distantfile, #pane-localfile {
   padding:1ex
}

#pane-localfile {
   float:right
}

#pane-localfile button {
   margin-left:1em
}

#loaddistantfile .title {
   color:#444;
   font-size:1.2em;
   margin-top:3px;
   padding-top:0;
   font-weight:bold
}

#pane-distantfile {
   float:left
}

p img {
  vertical-align:middle 
}

